deloy todoapp on heroku

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "random-id": "^1.0.3",
     "react": "^16.9.0",
+    "react-checkbox-group": "^5.0.2",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
